[FIX] overflow behavio y contain

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ body {
 }
 
 html, body {
-    overscroll-behavior-y: none;
+    overscroll-behavior-y: contain;
     overscroll-behavior-x: none;
 }
 
